--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-pub",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "打包并将结果上传至oss",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,10 @@
     "url": "git+https://github.com/HowCanLove/pub.git"
   },
   "type": "module",
-  "keywords": [],
+  "keywords": [
+    "node",
+    "pub"
+  ],
   "bugs": {
     "url": "https://github.com/HowCanLove/pub/issues"
   },
