--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "project-pub",
-	"version": "0.0.121",
+	"version": "0.0.122",
 	"description": "打包并将结果上传至oss",
 	"main": "index.js",
 	"scripts": {
@@ -15,9 +15,11 @@
 	"dependencies": {
 		"ali-oss": "^6.17.1",
 		"crypto": "^1.0.1",
+		"env-paths": "^3.0.0",
 		"fs": "^0.0.1-security",
 		"inquirer": "^9.1.0",
 		"moment": "^2.29.4",
+		"node-persist": "^4.0.4",
 		"path": "^0.12.7",
 		"shelljs": "^0.8.5",
 		"single-line-log": "^1.1.2"
